radix-transactions/tests/assets/manifest_parser_error_unexpected_token_8.diag
error: expected exactly '>', found ')'
  |
3 |     "lock_fee"
4 | ;
5 | CALL_METHOD
6 |     Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
7 |     "some_method"
8 |     Enum<0u8)
  |             ^ expected exactly '>'
9 | ;
  |